objects/Account_Legal_Attachment__c.object
<CustomObject>
    <fields>
        <fullName>Acceptance_Before_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Acceptance Before Payment?;</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Legal Attachments</relationshipLabel>
        <relationshipName>Account_Legal_Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Copado_indemnity_obligations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Copado indemnity obligations?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Customer_indemnity_obligation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Customer indemnity obligation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_restrictions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional restrictions?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_for_notice__c</fullName>
        <inlineHelpText>Include email if acceptable</inlineHelpText>
        <label>Address for notice</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Affiliates_authorized_to_use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Affiliates authorized to use?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agreement_posted_preprinted_terms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agreement posted/preprinted terms ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agreement_trumps_shrink_click__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agreement trumps shrink/click</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Anti_Corruption_language__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anti-Corruption language?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Any_unusual_considerations_requirements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Any unusual considerations/requirements?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attachment_Id__c</fullName>
        <label>Attachment Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Background_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Background Check?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COI_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>COI required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cap_on_Direct_Damages__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cap on Direct Damages?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_Request_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Request Form?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Citizenship_Restrictions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Citizenship Restrictions?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Code_of_conduct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Code of conduct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compliance_w_Customer_s_code_of_conduct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compliance w/ Customer&apos;s code of conduct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compliance_with_Copado_s_code_of_conduct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compliance with Copado&apos;s code of conduct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compliance_with_law__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compliance with law?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compliance_with_law_conf__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compliance with law?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Concept_of_Work_Product_Deliverables__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Concept of Work Product/Deliverables?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Content_Controls__c</fullName>
        <inlineHelpText>Controls on quantity of data at particular times</inlineHelpText>
        <label>Content Controls</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Copado_Standard_Confidentiality_language__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copado Standard Confidentiality language</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copado_Standard_Export_Provision__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copado Standard Export Provision?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copado_Standard_Indemnification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copado Standard Indemnification?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copado_Standard_Ins__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copado Standard?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copado_Standard_Notice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copado Standard?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copado_Standard_Ownership_language__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copado Standard Ownership language?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copado_Standard_Taxes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copado Standard?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copado_Standard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copado Standard?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copado_audit_of_Customer_s_use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copado audit of Customer&apos;s use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Process?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credits?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Confidentiality_definition__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Confidentiality definition?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Confidentiality_obligations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Confidentiality obligations?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Export_provision__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Export provision?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Ins__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Ownership_Language__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Ownership Language?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_SLA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom SLA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Support_Exhibit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Support Exhibit?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Standard_Indemnification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Standard Indemnification?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_can_conduct_security_audit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>(e.g., compliance with agreement, system records, SLA backup, security of Copado)</inlineHelpText>
        <label>Customer can conduct security audit?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_to_be_named_insured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer to be named insured?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DPA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DPA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_backup_provisions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data backup provisions?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_center_requirements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data center requirements?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disaster_Recovery_Continuity_Provisions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disaster Recovery Continuity Provisions?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disclaimer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Disclaimer of Incidental, Special and Consequential Damages?</inlineHelpText>
        <label>Disclaimer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RFP</fullName>
                </value>
                <value>
                    <fullName>Agreement-Customer Paper</fullName>
                </value>
                <value>
                    <fullName>Agreement-Copado Paper</fullName>
                </value>
                <value>
                    <fullName>Online Agreement</fullName>
                </value>
                <value>
                    <fullName>Amendment</fullName>
                </value>
                <value>
                    <fullName>DPA</fullName>
                </value>
                <value>
                    <fullName>BPA</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Drug_Screening__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Drug Screening?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Electronic_Notice_acceptable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Electronic Notice acceptable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Equal_employment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Equal employment?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclusions_for_downtime__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclusions for downtime?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclusive_Remedy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclusive Remedy?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Feedback_provision__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Feedback provision?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Force_Majeure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Force Majeure?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Geographic_Restrictions__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For example, some U.S, banks require only U.S. citizens to access their data</inlineHelpText>
        <label>Geographic Restrictions?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Geographical_limitations_for_fail_over__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Geographical limitations for fail-over?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Governing_Law_Jurisdiction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Governing Law/ Jurisdiction ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Governing_Law__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Governing Law?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hiring_Practices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hiring Practices?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Holidays_or_business_hours_identified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Holidays or business hours identified?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Indemnification_process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Indemnification process?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jurisdiction_Restriction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Jurisdiction Restriction ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Limitation_ma_leveraging__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Limitation on M&amp;A leveraging agreement?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Limitations_on_our_ownership_of_the_IP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Limitations on our ownership of the IP?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Local_Implementation_Addendum__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Local Implementation Addendum?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MFN_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MFN Pricing?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maintenance_of_Records_Audit_rights__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Maintenance of Records/Audit rights?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Milestone_billing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Milestone billing?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Must_comply_with_Customer_s_policies__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Including travel, but excluding security policies</inlineHelpText>
        <label>Must comply with Customer&apos;s policies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Net__c</fullName>
        <label>Net</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notice_for_outage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notice for outage?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notice_for_planned_downtime__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notice for planned downtime?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notices_Required_For_Scheduled_Downtime__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notices Required For Scheduled Downtime?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notification_for_insurance_changes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notification for insurance changes ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notify_Customer_changes_in_online_terms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify Customer changes in online terms?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>On_Site_policies__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On-Site policies?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Open_Source_Code_Integrity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Open Source/Code Integrity?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_articulated_escalation_framework__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other articulated escalation framework ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_unique_provisions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other unique provisions?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ownership_Infringement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ownership/Infringement?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Performance_Warranty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Performance Warranty?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Professional_Services_warranty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Professional Services warranty?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Provision_on_negotiations__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Arbitration/Mediation/Leadership</inlineHelpText>
        <label>Provision on negotiations?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Provisions_that_survive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Provisions that survive?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remedies__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>i.e. equitable remedies/injunctive relief</inlineHelpText>
        <label>Remedies?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Required_arbitration_including_carve_out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required arbitration including carve-out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Required_negotiation_including_carve_out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required negotiation including carve-out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resolution_times__c</fullName>
        <label>Resolution times?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_times__c</fullName>
        <label>Response times?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Return_or_destruction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Return or destruction?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLAs__c</fullName>
        <label>SLAs</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Security_Exhibit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Security Exhibit?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Short_term_extension_right__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Short term extension right?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sole_and_Exclusive_remedy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sole and Exclusive remedy?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_timeframe__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Special timeframe?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_way_of_notifying__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Special way of notifying?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standard_Copado_SLA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Standard Copado SLA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standard_Support_Exhibit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Standard Support Exhibit?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stated_limitations_on_personnel__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For example, only certain citizens?</inlineHelpText>
        <label>Stated limitations on personnel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subcontracting_Prohibited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subcontracting Prohibited?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Super_Cap__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Super Cap?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>System_access_restrictions__c</fullName>
        <label>System access restrictions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Time_is_of_the_essence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Time is of the essence?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transition_assistance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transition assistance?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Travel_policies__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travel policies?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_of_support__c</fullName>
        <inlineHelpText>Standard, success, etc.</inlineHelpText>
        <label>Type of support?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Uncapped_exclusions__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>E.g. fraud, willful misconduct, confidentiality, etc.</inlineHelpText>
        <label>Uncapped exclusions?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unusual_license_terms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unusual license terms?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Upgrades_migration_notification_proc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upgrades - migration / notification proc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_as_reference_for_another_customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use as reference for another customer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_of_aggregated_data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use of aggregated data?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Venue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>View_Document__c</fullName>
        <formula>IF (NOT(ISBLANK(Attachment_Id__c)),HYPERLINK(&quot;/&quot;+ Attachment_Id__c,&quot;View&quot;, &quot;_blank&quot;),NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View Document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Waiver_of_subrogation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waiver of subrogation?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_made_for_hire_language__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Work made for hire language?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>insurance_considerations_or_language__c</fullName>
        <defaultValue>false</defaultValue>
        <label>insurance considerations or language ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>publicly_acknowledge_this_customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>publicly acknowledge this customer ?</label>
        <type>Checkbox</type>
    </fields>
    <label>Account Legal Attachment</label>
    <nameField>
        <displayFormat>ALA-{0000}</displayFormat>
        <label>Account Legal Attachment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Legal Attachments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>